--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,5 +1,8 @@
 @import "fonts.css";
-
+.contenedor{
+    width: 2480px !important;
+    height: 3508px !important;
+}
 #barra {
     background: #d6d6d6;
     background-image: linear-gradient(to right,#28437b,#437e7a,#5cb47a);
