--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,36 +1,1 @@
-@import "fonts.css";
-.contenedor{
-    width: 2480px !important;
-    height: 3508px !important;
-}
-.centrado{
-    margin-left: 100px;
-    margin-right: 100px;
-}
-.letra{
-    font-size: 37px;
-}
-#barra {
-    background: #d6d6d6;
-    background-image: linear-gradient(to right,#28437b,#437e7a,#5cb47a);
-    background-repeat: repeat-x;
-}
-.montserrat-bold{
-    font-family: montserrat-bold;
-}
-.montserrat{
-    font-family: montserrat;
-}
-.texto-blanco{
-    color: white;
-}
-.padre {
-    display: flex;
-    align-items: center;
-}
-.texto-verde{
-    color: #5cb47a;
-}
-.texto-azul{
-    color: #28437b;
-}
+@import "fonts.css";.contenedor{ width: 1600px !important; height: 2300px !important;}.centrado{ width: 100%}.letra{ font-size: 30px;}#barra { background: #d6d6d6; background-image: linear-gradient(to right,#28437b,#437e7a,#5cb47a); background-repeat: repeat-x;}.montserrat-bold{ font-family: montserrat-bold;}.montserrat{ font-family: montserrat;}.texto-blanco{ color: white;}.padre { display: flex; align-items: center;}.texto-verde{ color: #5cb47a;}.texto-azul{ color: #28437b;}
